<resources>
    <string name="app_name">To university</string>
    <string name="splash_text">Выбери ВУЗ своей мечты!</string>
    <string name="small_text1">Подожди немного...</string>
    <string name="small_text2">Почти поступили!</string>
    <string name="title">Выбери свой ВУЗ!</string>
    <string name="hint_plain">Укажите свой общий балл</string>
    <string name="EGE">Укажи свои баллы ЕГЭ:</string>
    <string name="educational_place">Где бы ты хотел учиться?</string>
    <string name="choose_top">Ты бы хотел учиться в топ-10 ВУЗов?</string>
    <string name="choose_direction">Выбери, какие предметы сдавал на ЕГЭ:</string>
    <string name="chooseprice">Рассматриваешь платное обучение?</string>
    <string name="bt_next">Подобрать</string>
    <string name="bt_withoutfilres">Весь список</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="math">Математика (профиль)</string>
    <string name="obschestvo">Обществознание</string>
    <string name="phys">Физика</string>
    <string name="geo">География</string>
    <string name="info">Информатика</string>
    <string name="bio">Биология</string>
    <string name="chemistry">Химия</string>
    <string name="history">История</string>
    <string name="lit">Литература</string>
    <string name="eng">Иностранный</string>
    <string name="min_point">Ваши баллы ниже возможных проходных</string>
    <string name="max_point">Слишком высокий балл!</string>
    <string name="empty_fields_point">Введите свои баллы!</string>
    <string name="many_subjects">Можно выбрать только 2 или 3 предмета(+русский)</string>
    <string name="two_equals_subject">Нельзя выбрать 2 математики!</string>
    <string name="min_one_math">Должна быть выбрана одна математика!</string>
    <string name="splash_selection_text">Мы подбираем ВУЗы для вас! Желаем вам выбрать именно тот, о котором вы всегда мечтали!</string>
    <string name="bt_skip">Вернуться к фильтрам</string>
    <string name="splashselection_message">Мы подбираем лучшие ВУЗы для вас. Надеемся, вам понравится!</string>
    <string name="mathbase_checked">Необходимо выбрать 3 или 4 предмета(+русский)</string>
    <string name="BVI">Без вступительных испытаний</string>
    <string name="DVI">Есть вступительные испытания</string>
    <string name="Russian">Русский язык</string>
    <string name="paid">Платное</string>
    <string name="paidandfree">Платное/Бесплатное</string>
    <string name="search">Найти</string>
    <string name="bt_news">Новости</string>
    <string name="trackstart">trackstart</string>
    <string name="findcity"><![CDATA[id=\"newChooseq\" class=\"mmob\">]]></string>
    <string name="findcityEnd"><![CDATA[</span>]]></string>
    <string name="findpointf">которые есть в базе сайта</string>
    <string name="findpointf1"><![CDATA[<div class=\"itemNewBlockCombActive\" style=\"position: relative;]]></string>
    <string name="findUniversityCalled">, профиль</string>
    <string name="findsubject1">"1. "</string>
    <string name="findsubject2">"2. "</string>
    <string name="findsubject3">"3. "</string>
    <string name="findprice"><![CDATA["Стоимость: <strong>от "]]></string>
    <string name="in">" в "</string>
    <string name="findsubjectEnd">" - "</string>
    <string name="NotFoundedVUZes">К сожалению, по вашим фильтрам нет ВУЗов</string>


    <string-array name="spinner_value">
        <item>Москва</item>
        <item>Санкт-Петербург</item>
        <item>Все регионы</item>
    </string-array>


</resources>