<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/selectableItemBackground"
    android:orientation="vertical"
    tools:context=".HomeScreen">

    <!--1 block-->
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="@color/title_homescreen"
        android:textSize="40dp"
        android:textStyle="italic"
        android:shadowColor="@color/backsplash"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/gr"
        />
    <TextView
        android:id="@+id/EGE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/EGE"
        android:textAlignment="textStart"
        android:textColor="@color/title_homescreen"
        android:layout_marginTop="5dp"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        />
    <EditText
        android:id="@+id/EGE_points"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_plain"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EGE"
        android:textColorHint="?attr/colorPrimary"
        android:textColor="?attr/colorPrimary"
        />

    <!--2 block-->
    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@drawable/gr"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EGE_points"
        android:id="@+id/viewhighest"
        />
    <TextView
        android:id="@+id/titlen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_direction"
        android:textAlignment="textStart"
        android:textColor="@color/title_homescreen"
        android:textSize="15dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewhighest"/>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titlen"
        android:id="@+id/table">
        <TableRow>

            <CheckBox
                android:id="@+id/math"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:onClick="onCheckboxClicked"
                android:text="@string/math"
                android:textColor="@color/black"
                android:visibility="visible" />

            <CheckBox
                android:id="@+id/phys"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:checked="false"
                android:onClick="onCheckboxClicked"
                android:text="@string/phys"
                android:textColor="@color/black"
                android:visibility="visible" />
        </TableRow>
        <TableRow>

            <CheckBox
                android:id="@+id/info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:onClick="onCheckboxClicked"
                android:text="@string/info"
                android:textColor="@color/black"
                android:visibility="visible" />

            <CheckBox
                android:id="@+id/bio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:checked="false"
                android:onClick="onCheckboxClicked"
                android:text="@string/bio"
                android:textColor="@color/black"
                android:visibility="visible" />
        </TableRow>
        <TableRow>

            <CheckBox
                android:id="@+id/lit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:onClick="onCheckboxClicked"
                android:text="@string/lit"
                android:textColor="@color/black"
                android:visibility="visible" />

            <CheckBox
                android:id="@+id/chemistry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:checked="false"
                android:onClick="onCheckboxClicked"
                android:text="@string/chemistry"
                android:textColor="@color/black"
                android:visibility="visible" />
        </TableRow>
        <TableRow>

            <CheckBox
                android:id="@+id/eng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:onClick="onCheckboxClicked"
                android:text="@string/eng"
                android:textColor="@color/black"
                android:visibility="visible" />

            <CheckBox
                android:id="@+id/history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:checked="false"
                android:onClick="onCheckboxClicked"
                android:text="@string/history"
                android:textColor="@color/black"

                android:visibility="visible" />
        </TableRow>
        <TableRow>
            <CheckBox
                android:id="@+id/math_base"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:onClick="onCheckboxClicked"
                android:text="@string/obschestvo"
                android:textColor="@color/black"
                android:visibility="visible" />
            <CheckBox
                android:id="@+id/geo"
                android:layout_marginLeft="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:onClick="onCheckboxClicked"
                android:text="@string/geo"
                android:textColor="@color/black"
                android:visibility="visible" />
        </TableRow>
    </TableLayout>

    <!--3 block-->
    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@drawable/gr"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/table"
        android:id="@+id/viewmiddle"
        />
    <TextView
        android:id="@+id/TOP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_top"
        android:textAlignment="textStart"
        android:textColor="@color/title_homescreen"
        android:textSize="15dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewmiddle"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/radiogroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TOP"
        >
        <RadioButton
            android:id="@+id/radioButton_yes"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:textColor="@color/black"/>
        <RadioButton
            android:id="@+id/radioButton_no"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:checked="true"
            android:textColor="@color/black"/>
    </RadioGroup>

    <!--4 block-->
    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@drawable/gr"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radiogroup"
        android:id="@+id/viewmiddle2"
        />
    <TextView
        android:id="@+id/chooseprice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chooseprice"
        android:textAlignment="textStart"
        android:textColor="@color/title_homescreen"
        android:textSize="15dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewmiddle2"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseprice"
        android:id="@+id/radiogroup2"
        >
        <RadioButton
            android:id="@+id/radioButton_yes2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:textColor="@color/black"/>
        <RadioButton
            android:id="@+id/radioButton_no2"
            android:layout_width="200dp"
            android:layout_height="fill_parent"
            android:text="@string/no"
            android:textColor="@color/black"
            android:checked="true"/>
    </RadioGroup>


    <!--5 block-->
    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@drawable/gr"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radiogroup2"
        android:id="@+id/viewmiddle3"
        />
    <TextView
        android:id="@+id/educational_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/educational_place"
        android:textColor="@color/title_homescreen"
        android:textSize="15dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewmiddle3"
        />
    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:entries="@array/spinner_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/educational_place"
        android:outlineAmbientShadowColor="@color/black"
        android:outlineSpotShadowColor="@color/black"
        />



<!--    7 block-->


    <Button
        android:id="@+id/withoutFiltres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/bt_restart"
        android:onClick="ClickonWithoutFiltres"
        android:text="@string/bt_withoutfilres"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/educational_place" />

    <Button
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/bt_next"
        android:onClick="ClickonNext"
        android:text="@string/bt_next"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/withoutFiltres"/>


</androidx.constraintlayout.widget.ConstraintLayout>